2012-03-18  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, emuos.[ch], memory.c, Makefile.in, android/jni/Amdroid.mk.in,
  dc/Makefile.dc, win32/msc/Makefile: Always take UI font from EMUOS - fixes
  missing font when running the emulator in 5200 mode without configured OS
  ROMs.

* atari.[ch], cartridge.c, cfg.c, devices.c, esc.c, input.c, memory.c, pia.c,
  screen.c, sysrom.c, ui_basic.c, ui.c, sdl/input.c, android/jni/jni.c,
  atari800.man, DOC/USAGE:
  Reworked support for machine types. All XL/XE features can be enabled/
  disabled independently. UI menu "Select System" renamed to "System Settings"
  and reworked - now it only lists systems manufactured originally, with
  additional options for configuration.

* devices.c, esc.c, sysrom.[ch], ui.c, atari800.man, DOC/USAGE: Support OS
  revisions from the Arabic 65XE and prototype XL machines.


2012-03-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* pia.c: Fix recently-introduced bug with MEMORY_cartA0BF_enabled being saved
  twice in savestates - in both memory.c and pia.c.

* af80.c, cassette.c, devices.c, log.c, monitor.c, pbi_bb.c, pbi_mio.c,
  pbi_proto80.c, pbi_xld.c, sysrom.c, ui.c, xep80.c, wince/port/missing.c:
  Remove initialisation of local-static and global arrays to "", to prevent
  them ending up in .data segment instead of .bss on some architectures/
  compilers (android-arm). The C standard requires them to be initialised with
  zeroes at runtime, so initialisation with "" is not needed.


2012-03-10  Kostas Nakos  <knakos@gmail.com>
* android/*: Rename android port to Colleen


2012-03-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.[ch], cfg.c, input.c, memory.[ch], sysrom.[ch], ui.c, atari800.man,
  DOC/USAGE: Add emulation of the XEGS (builtin game, detachable keyboard).

* atari.[ch], cfg.c, input.c, ui.c: Add emulation of 1200XL option jumpers,
  as described in Atari XL Addendum section 3.8.

* ui.c: Emulate 32KB and 48KB memory expansions for the 600XL manufactured by